@@ -16,9 +16,20 @@ def show_longdesc():
     filename1 = tempfile.mktemp()
     filename2 = tempfile.mktemp()
     filename2 = filename2 + '.html'
-    os.system('%s setup.py --long-description > %s' % (sys.executable, filename1))
-    os.system('rst2html.py %s > %s' % (filename1, filename2))
+    error = os.system('%s setup.py --long-description > %s' % (
+            sys.executable, filename1))
+    if error:
+        logging.error('Error generating long description.')
+        sys.exit()
+    error = os.system('rst2html.py %s > %s' % (filename1, filename2))
+    if error:
+        # On Linux it needs to be 'rst2html', without the '.py'
+        error = os.system('rst2html %s > %s' % (filename1, filename2))
+    if error:
+        logging.error('Error generating html. Please install docutils.')
+        sys.exit()
     webbrowser.open(filename2)
+
 
 def main():
     logging.basicConfig(level=utils.loglevel(),
